# openmp_tutorial

./: .gitignore  README.md
tutorial1/: CMakeLists.txt  main.cpp
